force-app/main/default/objects/Plan_Estimate__c/Plan_Estimate__c.object-meta.xml
<CustomObject>
    <description>This object contains the estimated costs for a specific rate plan for a specific premise</description>
    <label>Plan Estimate</label>
    <nameField>
        <displayFormat>PE-{0}</displayFormat>
        <label>PlanEstimate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>