force-app/main/default/objects/Plan_Estimate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plan Estimates</relationshipLabel>
    <relationshipName>Plan_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>