force-app/main/default/objects/Plan_Estimate__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which plan is being estimated</description>
    <inlineHelpText>Which plan is being estimated</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Plan Estimates</relationshipLabel>
    <relationshipName>Plan_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>