force-app/main/default/objects/Plan_Estimate__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <description>which premise this estimate is for</description>
    <inlineHelpText>which premise this estimate is for</inlineHelpText>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Plan Estimates</relationshipLabel>
    <relationshipName>Plan_Estimates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>