force-app/main/default/objects/Plan_Estimate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Plan Estimates</relationshipLabel>
    <relationshipName>Plan_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>