force-app/main/default/objects/Plan_Estimate__c/fields/Total_Cost_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Rollup__c</fullName>
    <label>Total Cost Rollup</label>
    <summarizedField>Month_Estimate__c.Total__c</summarizedField>
    <summaryForeignKey>Month_Estimate__c.Plan_Estimate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>